--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@types/offscreencanvas": "^2019.7.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "sass": "^1.43.4",
-    "worker-loader": "^3.0.8",
-    "react-scripts": "4.0.3",
     "react-app-rewired": "^2.2.1",
-    "typescript": "^4.7.4"
+    "react-scripts": "4.0.3",
+    "sass": "^1.43.4",
+    "typescript": "^4.7.4",
+    "worker-loader": "^3.0.8"
   },
   "dependencies": {
     "bulma": "^0.9.3",
@@ -34,9 +34,9 @@
     "dexie": "^3.0.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-top-loading-bar": "^2.1.0",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0"
   },
