--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,12 +33,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Checkout submodules
+        run: git submodule update --init --recursive
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3.6.0
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Packages
         run: npm install
+      - name: Cache
+        uses: actions/cache@v3.3.0
       - name: Build page
         run: npm run build
       - name: Upload artifact
