--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
     "typescript": "^4.7.4",
-    "worker-loader": "^3.0.8"
+    "worker-loader": "^3.0.8",
+    "gh-pages": "^5.0.0"
   },
   "dependencies": {
     "bulma": "^0.9.3",
@@ -41,6 +42,8 @@
   },
   "config-overrides-path": "./common/react-app-rewired.config.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "eject": "react-scripts eject"
@@ -62,5 +65,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://asportsv.github.io/iBall"
 }
