--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@types/node": "^16.11.11",
     "@types/offscreencanvas": "^2019.7.0",
     "@types/react": "^17.0.0",
+    "@types/react-toggle": "^4.0.3",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^5.0.0",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
     "typescript": "^4.7.4",
-    "worker-loader": "^3.0.8",
-    "gh-pages": "^5.0.0"
+    "worker-loader": "^3.0.8"
   },
   "dependencies": {
     "bulma": "^0.9.3",
@@ -36,6 +37,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-toggle": "^4.1.3",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0"
   },
